# basecamp-template

./: CHECKLIST.md  COMPARISON.md  README.md
docs/: architecture.md  build-and-test.md  lessons-learned.md  qml-bridge.md
template/: .gitignore  CMakeLists.txt  flake.nix  metadata.json
template/core/: CMakeLists.txt  MyPlugin.cpp  MyPlugin.h  manifest.json  plugin_metadata.json
template/scripts/: install.sh  package-lgx.sh  relaunch.sh
template/ui/: CMakeLists.txt  Main.qml  manifest.json  metadata.json
